[package]
authors = ["Artem <skiftsu@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "quick-aliases"
homepage = "https://github.com/Skiftsu/quick-aliases"
repository = "https://github.com/Skiftsu/quick-aliases"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
